--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.6
   xml2json: ^5.3.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/logo.png
+    - assets/images/crying_bus.png
+    - assets/images/logo.png
+    - assets/images/crown.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
